// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as Casey 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <TrackTabChange
    screen="PeopleTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
</RCTSafeAreaView>
`;

exports[`renders correctly as Jean 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <TrackTabChange
    screen="PeopleTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="searchIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": "personal",
          "people": Array [
            Object {
              "id": 1,
              "type": "person",
            },
            Object {
              "id": 2,
              "type": "person",
            },
            Object {
              "id": 3,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 10,
          "name": "org 1",
          "people": Array [
            Object {
              "id": 11,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 20,
          "name": "org 2",
          "people": Array [
            Object {
              "id": 21,
              "type": "person",
            },
          ],
          "type": "organization",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={true}
    testID="peopleList"
  />
</RCTSafeAreaView>
`;

exports[`renders empty correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <TrackTabChange
    screen="PeopleTab"
  />
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    testID="header"
    title="PEOPLE"
  />
  <PeopleList
    items={
      Array [
        Object {
          "id": "me person",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={false}
    testID="peopleList"
  />
  <TakeAStepWithSomeoneButton />
</RCTSafeAreaView>
`;
